<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrdinaSync</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="firebase_store_ref">https://shining-fire-8684.firebaseio.com/</string>
    <string name="activity_store_choice_explanation">Welcome to Ordina Sync. This is a showcase of the Firebase framework</string>
    <string name="default_store_child_ref">OrdinaSync</string>
    <string name="activity_store_choice_confirm_button">Confirm</string>
    <string name="store_overview_add_button">Add</string>
    <string name="store_overview_add_hint">Add a value</string>
    <string name="store_overview_no_firebase_ref">No firebase Store Ref</string>
    <string name="activity_store_overview_title">Overview</string>
    <string name="activity_store_overview_toggle_airplane_mode">Toggle Airplane Mode</string>
    <string name="store_overview_remote_all_button">Remove All Items</string>

    <string name="data_saved_success">Data saved successfully.</string>
    <string name="data_saved_failure">Data could not be saved.</string>

    <string name="data_removed_success">Data removed succesfully</string>
    <string name="data_removed_failure">Data could not be removedy</string>
    <string name="store_overview_empty_list">No items available</string>
    <string name="activity_detailview_explanation">Everytime you type an updated version is sent to the server.</string>
    <string name="activity_detailview_delete_button_text">Delete item</string>
    <string name="detailview">Detail view</string>
    <string name="no_message_passed">No message passed</string>
    <string name="detailview_removed_item_success">Item removed.</string>
    <string name="threeway_merge_info">Please pick the value you wish to use</string>
    <string name="threeway_merge_pick_server">Pick Server</string>
    <string name="threeway_merge_pick_local">Pick local</string>
    <string name="threeway_merge_pick_original">Pick original</string>
    <string name="conflict">Conflict</string>
    <string name="activity_detailview_update_button_text">update</string>
    <string name="activity_detailview_merge_conflict">Merge conflict detected</string>
    <string name="activity_detailview_merge_button_text">Resolve conflict</string>

</resources>
