<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/threeway_merge_info" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/threeway_merge_server_edit" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/threeway_merge_pick_server" android:text="@string/threeway_merge_pick_server" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/threeway_merge_local_edit" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/threeway_merge_pick_local" android:text="@string/threeway_merge_pick_local" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/threeway_merge_original_edit"  />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/threeway_merge_pick_original" android:text="@string/threeway_merge_pick_original" />





</LinearLayout>