<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_store_choice_explanation"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/default_store_child_ref"
        android:id="@+id/activity_store_choice_store_ref_name"/>


    <Button
        android:layout_gravity="bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/activity_store_choice_confirm_button"
        android:text="@string/activity_store_choice_confirm_button"/>


</LinearLayout>