<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_detailview_explanation"/>
    
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_detailview_edit_text"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/activity_detailview_update_button" android:text="@string/activity_detailview_update_button_text" />
    


    <Button
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content" android:id="@+id/activity_detailview_delete_button"
        android:text="@string/activity_detailview_delete_button_text"/>



</LinearLayout>