<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_store_overview_no_firebase"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content" android:text="@string/store_overview_no_firebase_ref" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/activity_store_overview_firebase_active">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_store_overview_toggle_airplane_mode"
            android:text="@string/activity_store_overview_toggle_airplane_mode" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/store_overview_add_hint"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_store_overview_add_button"
                android:text="@string/store_overview_add_button"/>

        </LinearLayout>



    </LinearLayout>




</LinearLayout>
